Avatar squash issue

--- a/public/css/tailwind/tailwind.css
+++ b/public/css/tailwind/tailwind.css
@@ -2906,6 +2906,12 @@ nav ul > li {
   color: red;
 }
 
+@media screen and (max-width: 767px) {
+  .flex-basis-100 {
+    flex-basis: 100%;
+  }
+}
+
 @media (min-width: 640px) {
   .sm\:mt-0 {
     margin-top: 0px;
@@ -3385,4 +3391,4 @@ nav ul > li {
     font-size: 6rem;
     line-height: 1;
   }
-}
+} 
